headers/sqlucode.h

#define SQLPrimaryKeys        SQLPrimaryKeysW
#define SQLProcedureColumns    SQLProcedureColumnsW
#define SQLProcedures        SQLProceduresW
#define SQLTablePrivileges    SQLTablePrivilegesW
#define SQLDrivers        SQLDriversW