headers/sqlext.h

#define SQL_CODE_YEAR                1
#define SQL_CODE_MONTH                2
#define SQL_CODE_DAY                3
#define SQL_CODE_HOUR                4
#define SQL_CODE_MINUTE                5
#define SQL_CODE_SECOND                6
#define SQL_CODE_YEAR_TO_MONTH            7
#define SQL_CODE_DAY_TO_HOUR            8
#define SQL_CODE_DAY_TO_MINUTE            9
#define SQL_CODE_DAY_TO_SECOND            10
#define SQL_CODE_HOUR_TO_MINUTE            11
#define SQL_CODE_HOUR_TO_SECOND            12
#define SQL_CODE_MINUTE_TO_SECOND        13
    SQLRETURN SQL_API SQLSetPos(
        SQLHSTMT          hstmt,
        SQLSETPOSIROW      irow,
        SQLUSMALLINT      fOption,
        SQLUSMALLINT      fLock);
    SQLRETURN SQL_API SQLBindParameter(
        SQLHSTMT          hstmt,
        SQLUSMALLINT      ipar,
        SQLSMALLINT          fParamType,
        SQLSMALLINT          fCType,
        SQLSMALLINT          fSqlType,
        SQLULEN          cbColDef,
        SQLSMALLINT          ibScale,
        SQLPOINTER          rgbValue,
        SQLLEN          cbValueMax,
        SQLLEN*         pcbValue);
    /*
     *  Depreciated - use SQLSetStmtOptions
     */
    SQLRETURN SQL_API SQLSetScrollOptions(   /* Use SQLSetStmtOptions */
        SQLHSTMT          hstmt,
        SQLUSMALLINT      fConcurrency,
        SQLLEN          crowKeyset,
        SQLUSMALLINT      crowRowset);
    SQLRETURN SQL_API SQLAllocHandleStd(
        SQLSMALLINT          fHandleType,
        SQLHANDLE          hInput,
        SQLHANDLE*         phOutput);
    /* Internal type subcodes */
#define SQL_YEAR            SQL_CODE_YEAR
#define SQL_MONTH            SQL_CODE_MONTH
#define SQL_DAY                SQL_CODE_DAY
#define SQL_HOUR            SQL_CODE_HOUR
#define SQL_MINUTE            SQL_CODE_MINUTE
#define SQL_SECOND            SQL_CODE_SECOND
#define SQL_YEAR_TO_MONTH        SQL_CODE_YEAR_TO_MONTH
#define SQL_DAY_TO_HOUR            SQL_CODE_DAY_TO_HOUR
#define SQL_DAY_TO_MINUTE        SQL_CODE_DAY_TO_MINUTE
#define SQL_DAY_TO_SECOND        SQL_CODE_DAY_TO_SECOND
#define SQL_HOUR_TO_MINUTE        SQL_CODE_HOUR_TO_MINUTE
#define SQL_HOUR_TO_SECOND        SQL_CODE_HOUR_TO_SECOND
#define SQL_MINUTE_TO_SECOND        SQL_CODE_MINUTE_TO_SECOND