sql.py


        if hasattr(self.ODBC_DRIVER, "SQLPrimaryKeys"):
            self.ODBC_DRIVER.SQLPrimaryKeys.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLPrimaryKeys.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLPrimaryKeys = self.ODBC_DRIVER.SQLPrimaryKeys
        else:
            self.SQLPrimaryKeys = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLProcedureColumns"):
            self.ODBC_DRIVER.SQLProcedureColumns.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLProcedureColumns.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLProcedureColumns = self.ODBC_DRIVER.SQLProcedureColumns
        else:
            self.SQLProcedureColumns = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLProcedures"):
            self.ODBC_DRIVER.SQLProcedures.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLProcedures.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLProcedures = self.ODBC_DRIVER.SQLProcedures
        else:
            self.SQLProcedures = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetPos"):
            self.ODBC_DRIVER.SQLSetPos.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetPos.argtypes = (self.SQLHSTMT, self.SQLSETPOSIROW, self.SQLUSMALLINT, self.SQLUSMALLINT,)
            self.SQLSetPos = self.ODBC_DRIVER.SQLSetPos
        else:
            self.SQLSetPos = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLTablePrivileges"):
            self.ODBC_DRIVER.SQLTablePrivileges.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLTablePrivileges.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLTablePrivileges = self.ODBC_DRIVER.SQLTablePrivileges
        else:
            self.SQLTablePrivileges = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLDrivers"):
            self.ODBC_DRIVER.SQLDrivers.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDrivers.argtypes = (self.SQLHENV, self.SQLUSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLDrivers = self.ODBC_DRIVER.SQLDrivers
        else:
            self.SQLDrivers = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLBindParameter"):
            self.ODBC_DRIVER.SQLBindParameter.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLBindParameter.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLULEN, self.SQLSMALLINT, self.SQLPOINTER, self.SQLLEN, ctypes.POINTER(self.SQLLEN),)
            self.SQLBindParameter = self.ODBC_DRIVER.SQLBindParameter
        else:
            self.SQLBindParameter = self.UnimplementedSQLFunction

        ################################################################################
        ####Depreciated function prototypes#############################################
        ################################################################################
        if hasattr(self.ODBC_DRIVER, "SQLSetScrollOptions"):
            self.ODBC_DRIVER.SQLSetScrollOptions.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetScrollOptions.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLLEN, self.SQLUSMALLINT,)
            self.SQLSetScrollOptions = self.ODBC_DRIVER.SQLSetScrollOptions
        else:
            self.SQLSetScrollOptions = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLAllocHandleStd"):
            self.ODBC_DRIVER.SQLAllocHandleStd.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLAllocHandleStd.argtypes = (self.SQLSMALLINT, self.SQLHANDLE, ctypes.POINTER(self.SQLHANDLE),)
            self.SQLAllocHandleStd = self.ODBC_DRIVER.SQLAllocHandleStd
        else:
            self.SQLAllocHandleStd = self.UnimplementedSQLFunction

        ################################################################################
        ####Internal type subcodes######################################################
        ################################################################################
        self.SQL_YEAR = self.SQL_CODE_YEAR
        self.SQL_MONTH = self.SQL_CODE_MONTH
        self.SQL_DAY = self.SQL_CODE_DAY
        self.SQL_HOUR = self.SQL_CODE_HOUR
        self.SQL_MINUTE = self.SQL_CODE_MINUTE
        self.SQL_SECOND = self.SQL_CODE_SECOND
        self.SQL_YEAR_TO_MONTH = self.SQL_CODE_YEAR_TO_MONTH
        self.SQL_DAY_TO_HOUR = self.SQL_CODE_DAY_TO_HOUR
        self.SQL_DAY_TO_MINUTE = self.SQL_CODE_DAY_TO_MINUTE
        self.SQL_DAY_TO_SECOND = self.SQL_CODE_DAY_TO_SECOND
        self.SQL_HOUR_TO_MINUTE = self.SQL_CODE_HOUR_TO_MINUTE
        self.SQL_HOUR_TO_SECOND = self.SQL_CODE_HOUR_TO_SECOND
        self.SQL_MINUTE_TO_SECOND = self.SQL_CODE_MINUTE_TO_SECOND

